3/17/2013 - version 1.1.3:
   - Fixing bug from abicky's bugfix - search now works properly w/ max_id
3/16/2013 - version 1.1.2:
   - Bug fixes from abicky, remove a browser in statuses.R
3/3/2013 - version 1.1.1:
   - Added 'longitude' and 'latitude' fields to the status class,
     pulls from the 'coordinates' field of a tweet (when available)
3/1/2013 - version 1.1.0:
   - Release
2/23/2013 - version 0.99.28:
   - Added profileImageUrl to User class, along w/ getProfileImageUrl() method
2/9/2013 - version 0.99.27:
   - Added includeRts option to userTimeline
   - Updated man pages and vignette to pass check
1/21/2013 - version 0.99.26:
   - use rjson 0.2.24 to avoid some unicode issues
   - supply argument blockOnRateLimit which does what the name suggests
1/2/2013 - version 0.99.24:
   - Convert search to the 1.1 API
12/27/2012 - version 0.99.23:
   - Conversion for the 1.1 API
   - Multiple functions (e.g. publicTimeline()) were removed due to
     the corresponding functionality being removed from the API
   - The trend system has been completely rewritten
   - The rate limit system has been completely rewritten
   - The friendships() function has been added
2/20/2012 - version 0.99.19:
   - Fixed a bug in lookupUsers where screen names that had upper
     case characters in them weren't being properly populated
   - Switched (temporarily) to rjson in order to properly handle unicode
     text data from Twitter
   - Changed DM sender_id and recipient_id to be using the corresponding
     id_str