@@ -1,3 +1,5 @@
+3/18/2013 - version 1.1.4:
+   - Allow for by-hour filtering in since/until
 3/17/2013 - version 1.1.3:
    - Fixing bug from abicky's bugfix - search now works properly w/ max_id
 3/16/2013 - version 1.1.2:
